# as-moses

./: CMakeLists.txt  asmoses -Hmux -k3 -m2000 -p0.0001 --atomspace-port=1.dot  asmoses -Hmux -k3 -m2000 -p0.0001.dot  callgraph full ported.dot.ps  callgraph full withoutport.dot.ps  callgraph ported short2.dot.ps  callgraph short -Hmux without port.dot.ps  callgraph short ported.dot.ps  callgraph.dot  callgrind.out.4138  callgrind.out.5406  cscope.files
callgraph/: callgraph-k10 -m10000.dot.ps  callgraph-k3 -m10000.dot.ps  callgraph-k3 -m100000.dot.ps  callgraph-k4 -m10000.dot.ps  callgraph-k4 -m20000.dot.ps  callgraph-k5 -m10000.dot.ps  callgraph-k6 -m10000.dot.ps  callgraph-k7 -m10000.dot.ps  callgraph-k8 -m10000.dot.ps  callgraph-k9 -m10000.dot.ps  callgrind.out.22310  callgrind.out.24135  callgrind.out.5820
callgraph/asmoses m 100 port/: callgrind.out.12784  callgrind.out.12791  callgrind.out.12797  callgrind.out.12800  callgrind.out.12803  callgrind.out.12806  callgrind.out.12811  callgrind.out.12816
callgraph/asmoses m 1000 port/: callgrind.out.12878  callgrind.out.12883  callgrind.out.12886  callgrind.out.12890  callgrind.out.12903  callgrind.out.12907  callgrind.out.12988  callgrind.out.13008
callgraph/asmoses m 20000/: callgrind.out.16029  callgrind.out.16197  callgrind.out.17667  callgrind.out.19425  callgrind.out.19853  callgrind.out.20080  callgrind.out.20554  callgrind.out.23213
callgraph/asmoses m 20000 with port/: callgrind.out.30336  callgrind.out.30350  callgrind.out.30762  callgrind.out.4961  callgrind.out.5550  callgrind.out.5918  callgrind.out.6777  callgrind.out.8401
callgraph/asmoses m10000/: callgrind.out.12253  callgrind.out.13031  callgrind.out.13482  callgrind.out.14065  callgrind.out.14240  callgrind.out.14571  callgrind.out.14941  callgrind.out.15421
callgraph/melanoma/: callgrind.out.4443  callgrind.out.7116
callgraph/moses 100000/: callgrind.out.13147  callgrind.out.13469  callgrind.out.16477  callgrind.out.7641  callgrind.out.8172
callgraph/moses m 100/: callgrind.out.12417  callgrind.out.12421  callgrind.out.12428  callgrind.out.12431  callgrind.out.12435  callgrind.out.12438  callgrind.out.12441  callgrind.out.12445
callgraph/moses m 1000/: callgrind.out.13122  callgrind.out.13127  callgrind.out.13135  callgrind.out.13143  callgrind.out.13156  callgrind.out.13160  callgrind.out.13168  callgrind.out.13176
callgraph/moses m 10000/: callgrind.out.10385  callgrind.out.11425  callgrind.out.12066  callgrind.out.12161  callgrind.out.12432  callgrind.out.12802  callgrind.out.9631  callgrind.out.9738
callgraph/moses m 20000/: callgrind.out.11757  callgrind.out.12034  callgrind.out.12737  callgrind.out.12984  callgrind.out.15112  callgrind.out.19887  callgrind.out.20049  callgrind.out.20924
callgraph/moses m 30000 (asmoses)/: callgrind.out.23887  callgrind.out.25123  callgrind.out.27411  callgrind.out.29094  callgrind.out.29314  callgrind.out.29741  callgrind.out.29978
examples/example-ant/: ant_scoring.h  moses-ant-hillclimbing.cc  moses-ant-particleswarm.cc
examples/example-progs/: ann_xor_scoring.h  pole_balancing.h  pole_scoring.h  scoring_iterators.h
moses/: CMakeLists.txt
moses/atomese/: CMakeLists.txt
moses/comboreduct/: CMakeLists.txt
moses/comboreduct/ant_combo_vocabulary/: ant_action_symbol.h  ant_builtin_action.h  ant_combo_vocabulary.h  ant_indefinite_object.h  ant_operator.h  ant_perception.h
moses/comboreduct/converter/: combo_atomese.cc  combo_atomese.h
moses/comboreduct/crutil/: exception.h
moses/comboreduct/interpreter/: eval.cc  eval.h  interpreter.cc  interpreter.h
moses/comboreduct/main/: action-reductor.cc  combo-fmt-converter.cc  contin-reductor.cc  eval-table.h  full-reductor.cc  gen-disj-conj.cc  interactive-reductor.cc  logical-reductor.cc  mixed-reductor.cc  perception-reductor.cc  repl.cc  tree-sim.cc  tree_generation.h
moses/comboreduct/reduct/: action_rules.cc  ann_rules.h  branch_rules.cc  flat_normal_form.h  general_rules.cc  logical_rules.cc  logical_rules.h  meta_rules.cc  meta_rules.h  perception_rules.cc  reduct.h
moses/comboreduct/type_checker/: type_tree.cc  type_tree.h  type_tree_def.cc  type_tree_def.h
moses/data/: CMakeLists.txt
moses/data/combo/: action.cc  action.h  action_symbol.cc  action_symbol.h  argument.h  assumption.cc  assumption.h  builtin_action.cc  builtin_action.h  combo.h  common_def.h  convert_ann_combo.h  definite_object.cc  definite_object.h  descriptions.cc  descriptions.h  enum_type.cc  enum_type.h  indefinite_object.cc  indefinite_object.h  iostream_combo.h  message.cc  message.h  operator_base.h  perception.cc  perception.h  procedure_call.cc  procedure_call.h  procedure_repository.cc  procedure_repository.h  similarity.cc  similarity.h  simple_nn.h  vertex.cc  vertex.h
moses/data/representation/: CMakeLists.txt
moses/data/table/: table.cc  table.h
moses/feature-selection/main/: eval-features.h
moses/feature-selection/scorers/: moses_optim.h
moses/moses/deme/: feature_selector.h
moses/moses/main/: eval-candidate-likelihood.cc  eval-candidate.cc  problem-params.h  problem.h
moses/moses/metapopulation/: metapopulation.h
opencog/atomese/: CMakeLists.txt
opencog/atomese/atom_types/: CMakeLists.txt
opencog/atomese/scm/: asmoses.scm
tests/: CMakeLists.txt
tests/atomese/: CMakeLists.txt
tests/comboreduct/: CMakeLists.txt
tests/comboreduct/reduct/: ANNReductUTest.cxxtest  BooleanFullUTest.cxxtest  BooleanReductUTest.cxxtest  CMakeLists.txt  ContinReductUTest.cxxtest  FoldReductUTest.cxxtest  FullReductUTest.cxxtest  MixedReductUTest.cxxtest
tests/data/: CMakeLists.txt
tests/data/combo/: CMakeLists.txt  annUTest.cxxtest  interpreterUTest.cxxtest  iostream_comboUTest.cxxtest  listUTest.cxxtest  messageUTest.cxxtest  procedure_callUTest.cxxtest  procedure_repositoryUTest.cxxtest  similarityUTest.cxxtest  vertexUTest.cxxtest
tests/data/representation/: CMakeLists.txt
tests/data/table/: CMakeLists.txt
tests/moses/: AntUTest.cxxtest  CMakeLists.txt  atomese_logicalUTest.cxxtest  metapopulationUTest.cxxtest  moses-framework.h
(+31 files in other folders)
